@@ -14,7 +14,7 @@
 #undef APSTUDIO_READONLY_SYMBOLS
 
 /////////////////////////////////////////////////////////////////////////////
-// Englisch (USA) resources
+// English (U.S.) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENU)
 #ifdef _WIN32
@@ -1178,11 +1178,11 @@ BEGIN
     CONTROL         "Render Shadows",9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,49,71,10
     LTEXT           "I&mage:",-1,7,24,22,8
     LTEXT           "&Color",-1,7,10,20,9
-	EDITTEXT        IDC_REGION_UPDATES_TABLE,101,60,20,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_REGION_UPDATES_TABLE,101,60,20,12,ES_AUTOHSCROLL
     LTEXT           "Region Upd.    (-1=default",-1,7,62,94,8
-	EDITTEXT        IDC_REGION_OPT_TABLE,101,74,20,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_REGION_OPT_TABLE,101,74,20,12,ES_AUTOHSCROLL
     LTEXT           "Region Opt.       0=off, 1=on)",-1,7,76,94,8
-	EDITTEXT        IDC_TABLESOUNDVOLUME,101,88,20,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_TABLESOUNDVOLUME,101,88,20,12,ES_AUTOHSCROLL
     LTEXT           "Table Sound Volume (0..100)",-1,7,90,94,8
     EDITTEXT        IDC_TABLEMUSICVOLUME,101,102,20,12,ES_AUTOHSCROLL
     LTEXT           "Table Music Volume (0..100)",-1,7,104,94,8
@@ -1519,7 +1519,7 @@ STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     COMBOBOX        390,34,7,85,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        15000,7,31,113,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        DISPID_Image,7,31,113,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Custom2",391,"ColorControl",WS_TABSTOP,27,49,40,14
     LTEXT           "&Type",-1,7,9,25,8
     LTEXT           "&Color",-1,7,52,17,8
@@ -2110,7 +2110,7 @@ BEGIN
     IDS_TB_COMCONTROL       "ActiveX"
 END
 
-#endif    // Englisch (USA) resources
+#endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
 
